# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator_tool_calls.py  test_api.py  test_course_search_tool.py  test_rag_system.py
docs/: query_flow_diagram.md
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  quick-check.sh
